# BAIME

./: .gitignore  README.md  copier.yml  pyproject.toml
BAIME/: .gitignore  pyproject.toml
BAIME/config/: BAIME.yaml
BAIME/lib/: train.py
BAIME/lib/core/: register.py
BAIME/lib/dataset/: base_dataset.py
BAIME/lib/inferencer/: __init__.py  base_infer.py
BAIME/lib/loss/: base_loss.py
BAIME/lib/optimizer/: optimizer.py
BAIME/lib/runtime/: __init__.py  base_runtime.py  ddp.py  standalone.py
BAIME/lib/trainer/: base_trainer.py
BAIME/lib/utils/: file.py  tensorboard.py
BAIME/lib/utils/slurm/: slurm_launch.py  slurm_template.sh
BAIME/script/: train.sh  train_slurm.sh
DLite/: .gitignore  pyproject.toml
DLite/config/: DLite.yaml
DLite/lib/: train.py
DLite/lib/arch/: __init__.py  base_arch.py  unet_arch.py
DLite/lib/core/: register.py
DLite/lib/dataset/: __init__.py  npz_dataset.py
DLite/lib/loss/: __init__.py  mse_loss.py
DLite/lib/optimizer/: __init__.py
DLite/lib/scheduler/: __init__.py  scheduler.py
DLite/lib/trainer/: __init__.py
DLite/lib/utils/: file.py
DLite/lib/utils/slurm/: slurm_launch.py  slurm_template.sh
DLite/script/: train.sh  train_slurm.sh
